H.264 with "Lossless Output" enabled gives lossy output #38658
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#38658
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
OS: Ubuntu 13.10
Linux kernel: 3.11.0-15-generic
Graphics:
VGA compatible controller: Intel Corporation 4th Gen Core Processor Integrated Graphics Controller (rev 06)
3D controller: NVIDIA Corporation GK107M [GeForce GT 750M] (rev a1)
Blender Version
Broken: 2.69
7c69215
Short description of error
Choosing the Lossless Output option and a low bitrate gives a video with lossy compression.
Exact steps for others to reproduce the error
(1) Open new Blender file
(2) Under Render tab, under Output header, select H.264 for the File Format.
(3) Under Render tab, under Encoding header, select H.264 for format, enable "Lossless Output" and set (Video) Bitrate to 100.
(4) (Optional) set End frame to 50
(5) Press Animation
(6) Open the final video file in any video player and notice the lossy compression (I tested in VLC, Totem and Blender's VSE)
In addition to this bug, I also believe that once "Lossless Output" is selected, the options below should be greyed out to indicate they have no effect.
Step 1-4 have been completed already in this .blend file: lossless_H264_prob.blend
Here is a screenshot of the (paused) output video:
Changed status to: 'Open'
Added subscriber: @Garrett-8
This issue was referenced by blender/blender-addons-contrib@209a68af39
This issue was referenced by
209a68af39
Changed status from 'Open' to: 'Resolved'
Closed by commit
209a68af39
.Added subscriber: @animationista
This is still broken.
Bitrate still has effect on H.264 Lossless rendering.
On a ~1 min video:
Setting a bitrate of 20.000 gives me a 70Mb rendered file. Changing bitrate to 200 gives a 2Mb crappy looking file...
Blender 2.76b
If you've got bug, please open a new report instead of poking in 2 years old report.. include .blend file and instructions how you test lossy vs. lossless results.
Yes, because it's the exact same bug as this that is said to be fixed, that is the rational thing to do.